tests/machine/x/c/group_items_iteration.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_items_iteration.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:181:24: warning: implicit declaration of function ‘data_list_t_create’; did you mean ‘list_list_int_create’? [-Wimplicit-function-declaration]
  181 |     data_list_t tmp9 = data_list_t_create(_gp.items.len);
      |                        ^~~~~~~~~~~~~~~~~~
      |                        list_list_int_create
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:181:24: error: invalid initializer
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:203:21: error: incompatible types when assigning to type ‘int’ from type ‘tmp_item_t’
  203 |     tmp14.data[0] = (tmp_item_t){.tag = g.key, .total = total};
      |                     ^
/workspace/mochi/tests/machine/x/c/group_items_iteration.c:214:21: error: request for member ‘tag’ in something not a structure or union
  214 |     tmp20[tmp18] = r.tag;
      |                     ^

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
