tests/machine/x/c/group_items_iteration.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:29Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static void _print_list_int(list_int v) {
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(" ");
    printf("%d", v.data[i]);
  }
}
typedef struct {
  char *key;
  list_int items;
} _GroupString;
typedef struct {
  int len;
  int cap;
  _GroupString *data;
} list_group_string;
static list_group_string _group_by_string(list_string src) {
  list_group_string res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    char *key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (strcmp(res.data[j].key, key) == 0) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data =
            (_GroupString *)realloc(res.data, sizeof(_GroupString) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupString *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = i;
  }
  return res;
}
typedef struct {
  char *tag;
  int val;
} data_t;
typedef struct {
  int len;
  data_t *data;
} data_list_t;
static data_list_t create_data_list(int len) {
  data_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(data_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *key;
  data_list_t items;
} groupdata_t_t_t;
typedef struct {
  int len;
  groupdata_t_t_t *data;
} groupdata_t_t_list_t;
static groupdata_t_t_list_t create_groupdata_t_t_list(int len) {
  groupdata_t_t_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(groupdata_t_t_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *tag;
  int total;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
static tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  data_t tmp1_data[] = {(data_t){.tag = "a", .val = 1},
                        (data_t){.tag = "a", .val = 2},
                        (data_t){.tag = "b", .val = 3}};
  data_list_t tmp1 = {3, tmp1_data};
  data_list_t data = tmp1;
  data_list_t tmp2 = create_data_list(data.len);
  list_string tmp3 = list_string_create(data.len);
  int tmp4 = 0;
  for (int i5 = 0; i5 < data.len; i5++) {
    data_t d = data.data[i5];
    tmp2.data[tmp4] = d;
    tmp3.data[tmp4] = d.tag;
    tmp4++;
  }
  tmp2.len = tmp4;
  tmp3.len = tmp4;
  list_group_string tmp6 = _group_by_string(tmp3);
  groupdata_t_t_list_t tmp7 = create_groupdata_t_t_list(tmp6.len);
  int tmp8 = 0;
  for (int gi = 0; gi < tmp6.len; gi++) {
    _GroupString _gp = tmp6.data[gi];
    data_list_t tmp9 = data_list_t_create(_gp.items.len);
    for (int i10 = 0; i10 < _gp.items.len; i10++) {
      tmp9.data[i10] = tmp2.data[_gp.items.data[i10]];
    }
    tmp9.len = _gp.items.len;
    groupdata_t_t_t g = {_gp.key, tmp9};
    tmp7.data[tmp8] = g;
    tmp8++;
  }
  tmp7.len = tmp8;
  groupdata_t_t_list_t groups = tmp7;
  list_int tmp = list_int_create(0);
  for (int tmp11 = 0; tmp11 < groups.len; tmp11++) {
    groupdata_t_t_t g = groups.data[tmp11];
    int total = 0;
    for (int tmp12 = 0; tmp12 < g.items.len; tmp12++) {
      data_t x = g.items.data[tmp12];
      total = total + x.val;
    }
    list_int tmp13 = list_int_create(0);
    int tmp14_data[1];
    list_int tmp14 = {1, tmp14_data};
    tmp14.data[0] = (tmp_item_t){.tag = g.key, .total = total};
    list_int tmp15 = concat_list_int(tmp13, tmp14);
    tmp = tmp15;
  }
  list_int tmp16 = list_int_create(0);
  list_int tmp17 = list_int_create(0);
  int *tmp20 = (int *)malloc(sizeof(int) * 0);
  int tmp18 = 0;
  for (int tmp19 = 0; tmp19 < 0; tmp19++) {
    int r = tmp16.data[tmp19];
    tmp17.data[tmp18] = r;
    tmp20[tmp18] = r.tag;
    tmp18++;
  }
  tmp17.len = tmp18;
  for (int i23 = 0; i23 < tmp18 - 1; i23++) {
    for (int i24 = i23 + 1; i24 < tmp18; i24++) {
      if (tmp20[i23] > tmp20[i24]) {
        int tmp21 = tmp20[i23];
        tmp20[i23] = tmp20[i24];
        tmp20[i24] = tmp21;
        int tmp22 = tmp17.data[i23];
        tmp17.data[i23] = tmp17.data[i24];
        tmp17.data[i24] = tmp22;
      }
    }
  }
  list_int result = tmp17;
  _print_list_int(result);
  printf("\n");
  free(tmp17.data);
  return 0;
}
